# dial-mpc

./: README.md
dial_mpc/: CMakeLists.txt  package.xml
dial_mpc/include/: UnitreeGo2Env.h  dial-core.h  mujoco-sim.h  unitree-go2-env.h
dial_mpc/src/: control_sequence.cpp  control_sequence_visualizer.cpp  dial-core-simulate.cpp  dial-core-test.cpp  legged_robot_ik.cpp
dial_mpc_2/: CMakeLists.txt
dial_mpc_2/include/: dial-core.h  unitree-go2-env.h
dial_mpc_2/src/: dial-core-simulate.cpp
dial_mpc_eigen/: CMakeLists.txt
dial_mpc_eigen/include/: dial-core.h  unitree-go2-env.h
dial_mpc_eigen/src/: dial-core-simulate.cpp  dial-core-test.cpp  unitree-go2-env-test.cpp
dial_mpc_eigen_plotting/: CMakeLists.txt
dial_mpc_eigen_plotting/include/: dial-core.h  mujoco-sim.h  simulation.h  unitree-go2-env.h
dial_mpc_eigen_plotting/src/: dial-core-simulate.cpp  unitree-go2-env-test.cpp
ethan-version/: CMakeLists.txt
ethan-version/cmake/: Findmujoco.cmake
ethan-version/src/: UnitreeGo2Env.cpp  dial-core1.cpp  dial-core2.cpp  dial-core3.cpp
